--- a/components/filter/filter.css
+++ b/components/filter/filter.css
@@ -2,10 +2,9 @@
   box-sizing: border-box;
 }
 /* -----FILTER MOBILE START----- */
-.filter_ctn {
-}
+
 .filter {
-  background-color: var(--btnColor-2);
+  background-color: var(--btnColor_2);
   box-shadow: -1px 5px 10px rgb(174, 197, 193);
   margin-top: 1rem;
   padding: 1.5rem;
@@ -15,7 +14,7 @@
 }
 .filter_txt {
   font-size: 1rem;
-  color: var(--btnColor-1);
+  color: var(--btnColor_1);
   font-weight: 700;
 }
 .filter .row .col {
