--- a/gridLibrary/gridBasic.css
+++ b/gridLibrary/gridBasic.css
@@ -362,7 +362,8 @@
 }
 @media (min-width: 1024px) and (max-width: 1239px) {
   .wide {
-    width: 984px;
+    /* width: 984px; */
+    width: 940px;
     margin: 0 auto;
   }
   .wide .row {
